# web-crawlers

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: default.yaml  domain-seeds.yaml
omnispider/: __init__.py  api.py  cli.py
omnispider/core/: config.py  models.py  orchestrator.py  policy.py  storage.py
omnispider/discovery/: links.py
omnispider/engines/: archive_engine.py  base.py  browser_engines.py  http_engine.py  registry.py
src/: api.ts  cli.ts
src/chat/: algorithm-chatbot.ts  chat-service.ts  live-data-policy.ts  retrieval-ranker.ts
src/core/: domain-seeds.ts  models.ts  orchestrator.ts  policy.ts  storage.ts  text-extract.ts
src/engines/: registry.ts
src/topic/: global-intel.ts  household-intel.ts  index.ts  intelligence-runners.ts  intelligence.ts  knowledge-intel.ts  org-intel.ts  people-intel.ts  search-mode.ts  social-trail.ts  temporal-intel.ts
tests/: algorithm-chatbot.test.ts  domain-seeds.test.ts  omnispider.test.ts  retrieval-ranker.test.ts  test_policy.py
vendors/: README.md
