[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnispider"
version = "0.1.0"
description = "All-in-one web spider orchestrator unifying multiple crawl engines"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Omnispider" }]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "aiosqlite>=0.20",
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "tenacity>=8.3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
browser = ["playwright>=1.44"]
forms = ["MechanicalSoup>=1.3"]
scrapy = ["scrapy>=2.11"]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
omnispider = "omnispider.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["omnispider*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
